map struct added